# teleprompter

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.js  使用指南.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: 发布清单.md  打包说明.md  更新日志-6.0.md  更新日志-6.1.md  更新日志-6.2.md  更新日志-6.3.md  更新日志-6.4.md  项目维护说明.md
docs/agents/: domain.md  issue-tracker.md
scripts/: check-frontend-parity.ps1  check-project.ps1  check-version.ps1  sync-frontend.ps1  sync-version.ps1
tests/: dbg.spec.js  electron.spec.js  teleprompter.spec.js
windows-electron/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  功能介绍.md
windows-tauri/: README.md  package-lock.json  package.json  功能介绍.md
windows-tauri/src-tauri/: Cargo.toml  tauri.conf.json
windows-tauri/src-tauri/capabilities/: default.json  main.json  output.json
windows-tauri/src-tauri/src/: lib.rs  main.rs
windows-tauri/web/: index.html  output.html
