[package]
name = "teleprompter_tauri"
version = "6.1.5"
description = "A lightweight desktop teleprompter app."
authors = ["Codex"]
edition = "2021"

[lib]
name = "teleprompter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
